Opened 6 years ago
Closed 4 months ago
#4641 closed defect (fixed)
Error decoding SILK frame
Reported by: | zevarito | Owned by: | |
---|---|---|---|
Priority: | normal | Component: | avcodec |
Version: | git-master | Keywords: | opus |
Cc: | Blocked By: | ||
Blocking: | Reproduced by developer: | yes | |
Analyzed by developer: | no |
Description
When I reproduce the attached MKV file with VP8/Opus it lost audio.
FFplay logs the following errors several times:
[opus @ 0x7f952101f400] LBRR frames present; this is unsupported [opus @ 0x7f952101f400] Error decoding a SILK frame. [opus @ 0x7f952101f400] Error decoding an Opus frame.
The file was generated live recording a Webrtc session.
Any help welcome, thanks.
Attachments (1)
Change History (5)
comment:1 Changed 6 years ago by zevarito
comment:2 Changed 6 years ago by cehoyos
- Component changed from ffmpeg to avcodec
- Keywords vp8 webrtc removed
- Reproduced by developer set
- Status changed from new to open
- Version changed from unspecified to git-master
For future tickets: Please always provide a command line that allows to reproduce the issue together with the complete, uncut console output.
Only the first 29 seconds can be decoded.
$ ffmpeg -i LBRR.mkv -t 30 out.wav ffmpeg version N-73002-gf6c3f1e Copyright (c) 2000-2015 the FFmpeg developers built with gcc 4.7 (SUSE Linux) configuration: --enable-gpl libavutil 54. 27.100 / 54. 27.100 libavcodec 56. 41.100 / 56. 41.100 libavformat 56. 37.100 / 56. 37.100 libavdevice 56. 4.100 / 56. 4.100 libavfilter 5. 17.100 / 5. 17.100 libswscale 3. 1.101 / 3. 1.101 libswresample 1. 2.100 / 1. 2.100 libpostproc 53. 3.100 / 53. 3.100 Input #0, matroska,webm, from 'LBRR.mkv': Metadata: ENCODER : Lavf56.37.100 Duration: 00:03:35.68, start: 0.000000, bitrate: 31 kb/s Stream #0:0: Audio: opus, 48000 Hz, stereo, fltp (default) Output #0, wav, to 'out.wav': Metadata: ISFT : Lavf56.37.100 Stream #0:0: Audio: pcm_s16le ([1][0][0][0] / 0x0001), 48000 Hz, stereo, s16, 1536 kb/s (default) Metadata: encoder : Lavc56.41.100 pcm_s16le Stream mapping: Stream #0:0 -> #0:0 (opus (native) -> pcm_s16le (native)) Press [q] to stop, [?] for help [opus @ 0x2b5bfc0] LBRR frames present; this is unsupported [opus @ 0x2b5bfc0] Error decoding a SILK frame. [opus @ 0x2b5bfc0] Error decoding an Opus frame. [opus @ 0x2b5bfc0] LBRR frames present; this is unsupported [opus @ 0x2b5bfc0] Error decoding a SILK frame. [opus @ 0x2b5bfc0] Error decoding an Opus frame. [opus @ 0x2b5bfc0] LBRR frames present; this is unsupported [opus @ 0x2b5bfc0] Error decoding a SILK frame. [opus @ 0x2b5bfc0] Error decoding an Opus frame. [opus @ 0x2b5bfc0] LBRR frames present; this is unsupported [opus @ 0x2b5bfc0] Error decoding a SILK frame. [opus @ 0x2b5bfc0] Error decoding an Opus frame. [opus @ 0x2b5bfc0] LBRR frames present; this is unsupported [opus @ 0x2b5bfc0] Error decoding a SILK frame. [opus @ 0x2b5bfc0] Error decoding an Opus frame. [opus @ 0x2b5bfc0] LBRR frames present; this is unsupported [opus @ 0x2b5bfc0] Error decoding a SILK frame. [opus @ 0x2b5bfc0] Error decoding an Opus frame. [opus @ 0x2b5bfc0] LBRR frames present; this is unsupported [opus @ 0x2b5bfc0] Error decoding a SILK frame. [opus @ 0x2b5bfc0] Error decoding an Opus frame. [opus @ 0x2b5bfc0] LBRR frames present; this is unsupported [opus @ 0x2b5bfc0] Error decoding a SILK frame. [opus @ 0x2b5bfc0] Error decoding an Opus frame. [opus @ 0x2b5bfc0] LBRR frames present; this is unsupported [opus @ 0x2b5bfc0] Error decoding a SILK frame. [opus @ 0x2b5bfc0] Error decoding an Opus frame. [opus @ 0x2b5bfc0] LBRR frames present; this is unsupported [opus @ 0x2b5bfc0] Error decoding a SILK frame. [opus @ 0x2b5bfc0] Error decoding an Opus frame. [opus @ 0x2b5bfc0] LBRR frames present; this is unsupported [opus @ 0x2b5bfc0] Error decoding a SILK frame. [opus @ 0x2b5bfc0] Error decoding an Opus frame. [opus @ 0x2b5bfc0] LBRR frames present; this is unsupported [opus @ 0x2b5bfc0] Error decoding a SILK frame. [opus @ 0x2b5bfc0] Error decoding an Opus frame. [opus @ 0x2b5bfc0] LBRR frames present; this is unsupported [opus @ 0x2b5bfc0] Error decoding a SILK frame. [opus @ 0x2b5bfc0] Error decoding an Opus frame. [opus @ 0x2b5bfc0] LBRR frames present; this is unsupported [opus @ 0x2b5bfc0] Error decoding a SILK frame. [opus @ 0x2b5bfc0] Error decoding an Opus frame. [opus @ 0x2b5bfc0] LBRR frames present; this is unsupported [opus @ 0x2b5bfc0] Error decoding a SILK frame. [opus @ 0x2b5bfc0] Error decoding an Opus frame. [opus @ 0x2b5bfc0] LBRR frames present; this is unsupported [opus @ 0x2b5bfc0] Error decoding a SILK frame. [opus @ 0x2b5bfc0] Error decoding an Opus frame. [opus @ 0x2b5bfc0] LBRR frames present; this is unsupported [opus @ 0x2b5bfc0] Error decoding a SILK frame. [opus @ 0x2b5bfc0] Error decoding an Opus frame. [opus @ 0x2b5bfc0] LBRR frames present; this is unsupported [opus @ 0x2b5bfc0] Error decoding a SILK frame. [opus @ 0x2b5bfc0] Error decoding an Opus frame. [opus @ 0x2b5bfc0] LBRR frames present; this is unsupported [opus @ 0x2b5bfc0] Error decoding a SILK frame. [opus @ 0x2b5bfc0] Error decoding an Opus frame. [opus @ 0x2b5bfc0] LBRR frames present; this is unsupported [opus @ 0x2b5bfc0] Error decoding a SILK frame. [opus @ 0x2b5bfc0] Error decoding an Opus frame. [opus @ 0x2b5bfc0] LBRR frames present; this is unsupported [opus @ 0x2b5bfc0] Error decoding a SILK frame. [opus @ 0x2b5bfc0] Error decoding an Opus frame. [opus @ 0x2b5bfc0] LBRR frames present; this is unsupported [opus @ 0x2b5bfc0] Error decoding a SILK frame. [opus @ 0x2b5bfc0] Error decoding an Opus frame. [opus @ 0x2b5bfc0] LBRR frames present; this is unsupported [opus @ 0x2b5bfc0] Error decoding a SILK frame. [opus @ 0x2b5bfc0] Error decoding an Opus frame. [opus @ 0x2b5bfc0] LBRR frames present; this is unsupported [opus @ 0x2b5bfc0] Error decoding a SILK frame. [opus @ 0x2b5bfc0] Error decoding an Opus frame. [opus @ 0x2b5bfc0] LBRR frames present; this is unsupported [opus @ 0x2b5bfc0] Error decoding a SILK frame. [opus @ 0x2b5bfc0] Error decoding an Opus frame. [opus @ 0x2b5bfc0] LBRR frames present; this is unsupported [opus @ 0x2b5bfc0] Error decoding a SILK frame. [opus @ 0x2b5bfc0] Error decoding an Opus frame. [opus @ 0x2b5bfc0] LBRR frames present; this is unsupported [opus @ 0x2b5bfc0] Error decoding a SILK frame. [opus @ 0x2b5bfc0] Error decoding an Opus frame. [opus @ 0x2b5bfc0] LBRR frames present; this is unsupported [opus @ 0x2b5bfc0] Error decoding a SILK frame. [opus @ 0x2b5bfc0] Error decoding an Opus frame. [opus @ 0x2b5bfc0] LBRR frames present; this is unsupported [opus @ 0x2b5bfc0] Error decoding a SILK frame. [opus @ 0x2b5bfc0] Error decoding an Opus frame. [opus @ 0x2b5bfc0] LBRR frames present; this is unsupported [opus @ 0x2b5bfc0] Error decoding a SILK frame. [opus @ 0x2b5bfc0] Error decoding an Opus frame. [opus @ 0x2b5bfc0] LBRR frames present; this is unsupported [opus @ 0x2b5bfc0] Error decoding a SILK frame. [opus @ 0x2b5bfc0] Error decoding an Opus frame. [opus @ 0x2b5bfc0] LBRR frames present; this is unsupported [opus @ 0x2b5bfc0] Error decoding a SILK frame. [opus @ 0x2b5bfc0] Error decoding an Opus frame. [opus @ 0x2b5bfc0] LBRR frames present; this is unsupported [opus @ 0x2b5bfc0] Error decoding a SILK frame. [opus @ 0x2b5bfc0] Error decoding an Opus frame. [opus @ 0x2b5bfc0] LBRR frames present; this is unsupported [opus @ 0x2b5bfc0] Error decoding a SILK frame. [opus @ 0x2b5bfc0] Error decoding an Opus frame. [opus @ 0x2b5bfc0] LBRR frames present; this is unsupported [opus @ 0x2b5bfc0] Error decoding a SILK frame. [opus @ 0x2b5bfc0] Error decoding an Opus frame. [opus @ 0x2b5bfc0] LBRR frames present; this is unsupported [opus @ 0x2b5bfc0] Error decoding a SILK frame. [opus @ 0x2b5bfc0] Error decoding an Opus frame. [opus @ 0x2b5bfc0] LBRR frames present; this is unsupported [opus @ 0x2b5bfc0] Error decoding a SILK frame. [opus @ 0x2b5bfc0] Error decoding an Opus frame. [opus @ 0x2b5bfc0] LBRR frames present; this is unsupported [opus @ 0x2b5bfc0] Error decoding a SILK frame. [opus @ 0x2b5bfc0] Error decoding an Opus frame. size= 5618kB time=00:00:30.00 bitrate=1534.0kbits/s video:0kB audio:5618kB subtitle:0kB other streams:0kB global headers:0kB muxing overhead: 0.001356%
Changed 6 years ago by cehoyos
comment:3 Changed 3 years ago by igracia
Reviving and old thread, but adding info here in case anyone stumbles with this. It seems like the native opus codec library that comes with ffmpeg is not correctly configured, and this is fixed by using libopus for decoding the audio input streams (source). I was able to make this work that way
$ ffmpeg -acodec libopus -i 851515232352539900.mkv -t 30 out.wav ffmpeg version 3.4.1 Copyright (c) 2000-2017 the FFmpeg developers built with Apple LLVM version 9.0.0 (clang-900.0.39.2) configuration: --prefix=/usr/local/Cellar/ffmpeg/3.4.1 --enable-shared --enable-pthreads --enable-version3 --enable-hardcoded-tables --enable-avresample --cc=clang --host-cflags= --host-ldflags= --enable-gpl --enable-ffplay --enable-libass --enable-libfdk-aac --enable-libfreetype --enable-libmp3lame --enable-libopus --enable-libvorbis --enable-libvpx --enable-libx264 --enable-libx265 --enable-libxvid --enable-opencl --enable-videotoolbox --disable-lzma --enable-nonfree libavutil 55. 78.100 / 55. 78.100 libavcodec 57.107.100 / 57.107.100 libavformat 57. 83.100 / 57. 83.100 libavdevice 57. 10.100 / 57. 10.100 libavfilter 6.107.100 / 6.107.100 libavresample 3. 7. 0 / 3. 7. 0 libswscale 4. 8.100 / 4. 8.100 libswresample 2. 9.100 / 2. 9.100 libpostproc 54. 7.100 / 54. 7.100 Input #0, matroska,webm, from '851515232352539900.mkv': Metadata: ENCODER : Lavf56.1.0 Duration: 00:03:35.66, start: 0.000000, bitrate: 984 kb/s Stream #0:0: Video: vp8, yuv420p(progressive), 640x480, SAR 1:1 DAR 4:3, 1k tbr, 1k tbn, 1k tbc Stream #0:1: Audio: opus, 48000 Hz, stereo, s16 Stream mapping: Stream #0:1 -> #0:0 (opus (libopus) -> pcm_s16le (native)) Press [q] to stop, [?] for help Output #0, wav, to 'out.wav': Metadata: ISFT : Lavf57.83.100 Stream #0:0: Audio: pcm_s16le ([1][0][0][0] / 0x0001), 48000 Hz, stereo, s16, 1536 kb/s Metadata: encoder : Lavc57.107.100 pcm_s16le size= 5618kB time=00:00:30.00 bitrate=1534.0kbits/s speed= 308x video:0kB audio:5618kB subtitle:0kB other streams:0kB global headers:0kB muxing overhead: 0.001356%
comment:4 Changed 4 months ago by cehoyos
- Resolution set to fixed
- Status changed from open to closed
Fixed by Anton in 33b4b788aac91dfd522415baaedcbda160482816
Could not attach the file because there is a limit of 2Mb and this file had 25Mb.
So here is a link to google drive.
BTW. The one in the video is not me :D
https://drive.google.com/file/d/0B5odnhxMMqItaDc3ckwwMFMtSmc/view?usp=sharing