opusdec: do not fail when LBRR frames are present

Decode and discard them.

Fixes ticket 4641.

(cherry picked from commit 33b4b788aac91dfd522415baaedcbda160482816)
Signed-off-by: Anton Khirnov <anton@khirnov.net>